<menu xmlns:android="http://schemas.android.com/apk/res/android" >
   	
   	<item
        android:id="@+id/menu_addincome"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_addincome"/>
    
    <item
        android:id="@+id/menu_addexpense"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_addexpense"/>
    
    <item
        android:id="@+id/menu_viewgoals"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_viewgoals"/>
    
    <item
        android:id="@+id/menu_viewcategories"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_viewcategories"/>
    
    <item
        android:id="@+id/menu_viewincexp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_viewincexp"/>
    
    <item
        android:id="@+id/menu_viewtrends"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_viewtrends"/>
    
    <item
        android:id="@+id/menu_summary"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_summary"/>

</menu>